# wurstmineberg.de

./: .gitignore  .htaccess  000-wurstmineberg-nginxconf.txt  Cargo.toml  README.md  about.html  assets.wurstmineberg.de.nginx  build.rs  config.py  dev-wurstmineberg-nginxconf.txt  dev-wurstmineberg.ini  dev.wurstmineberg.de.nginx  events.html  flake.nix  index.html  manage.py  overviewer.conf  people.html  people.json  requirements.txt  routes.py  setup.py  stats.html  wurstmineberg-web.py  wurstmineberg.de.nginx  wurstmineberg.ini
.sqlx/: query-0121b70bd0a96717b0826771c4484ba88508dcee3f4a2d1228f07696c2c8b543.json  query-0a044242e8dc6805cd46b1e650d71782e8c13b02bbe1ec382a4a3f011a7fac1e.json  query-0b7648ab039d9a1e45057b5c5f4d8f826994bbcbaeccf1b5180fdecef949723c.json  query-16b6a0a0b48920a94041c40fa24f52150618169f5aa56c95421f60400e567708.json  query-1ad8b7605998999123c0586d9bb35e05cbd8bc946c412092e9d867d1faace76a.json  query-2a65d57646a5033a75d43b7944693cc4c371f3ed6fdad213e78dc6b9f768e6b0.json  query-3285098530e7a8a55d054041e8e4c3e86e93c0b321f3253eaac8bd9fad0769e9.json  query-36b0d42ddd160d29675bc10709014a54d02b39450b8436b30b1ab8cd70c1cb51.json  query-41eae4029bc5355b6a33b7db98ee0775e6b933118006bb6a43ba1b7cfbda5eb8.json  query-4f42beea99cce7ee06ca01daf9562cdaa53cf7603145ddd033deaf92470bd0cb.json  query-525844c59711d2099d586ab0687fb64b2721f57c05be785aeff8470fea802c5b.json  query-54061bbe6af929010674c67d11c284a72d2996ae6c8caf7ae86b67ccca7a5f5a.json  query-5593665124428a7bfa4751a8f1398ad8743c356a505eecc378b9403fdc2b0bda.json  query-5b0c1f171de1816e338acebff70f3a66b0e7f7677cb9fede860d6fe4c74d3a3b.json  query-656dc1e4d3d723e575d771bf828554f962d8eb7db04023858c783fca86d3c287.json  query-80f24eee8e924e78f329251eead7b2182a25bbbdff97ce362eb565854ce8acf1.json  query-90e24174da1b30e8ad1894f7eeb79aa71375db88fe85acd914d20dd5aa04c36a.json  query-9eb37eb7a4f132617657edd268a21dc588c9861caba23faf7c5eb4be78cd6c95.json  query-a50c09b1c5a4133597ce896bb37c3dc6d388324415459b9a1696f871ffd34c7f.json  query-b25424b10ce2fbcb3888a0ca79315e05554c2a14c1b0ae0b575e7f24d5767b88.json  query-be4d9c177866c774049ddbdc68a5f8dac0023f5ae2020c8bdc70e38d1c0b6b4e.json  query-c4cd0095d3075e8986c931f2b995838b7812a9d749d4ef4fab312413dab6ca92.json  query-c87a40f0c6feb89cdc559a39f75e3ae3759280c83bbb1dd840d2900aad7fb071.json  query-d3d3d696a7379acbe7ce2d19f8d867f932597d781aaf3eb2896adefd8cea56a4.json  query-d3f3eadea85b6e9b2c5e1a4b2d988e14dca31b0ccefad8e33bd31df961c7bca2.json  query-d4999afa07e19747f4b1ab4c97f4de2a4d683d106645dbeffb27c42f3d62436a.json  query-d63ca9cccf034366264db5316c8abdf8dea9a6da7b0055ec937761fb596bf374.json  query-d7fb5dd0b6c3a438a4ffeed64933110b2b8fb1e1af71b26c4d377d3ee38dae12.json  query-dd88db393b64fb6c61c3753bf0bedbb46de02679330b0e124a57876dcd8ae35c.json  query-df858675bafb0e2f32430fe910cf9264d3ea29b97498cade9e99257dc80ca40a.json  query-e36dc332b30d6f013099c5dfa569bca52d04a296c809948eb6650c1a6a480cdb.json  query-ffe5c335615c0fde2126fe12cee6fe9c5bf981f4e0ac34c809273e73d241aee1.json
assets/: Caddyfile  assets.wurstmineberg.de.nginx  deploy.ps1  deploy.sh  dev.wurstmineberg.de.nginx  inner.nginx  pre-commit.ps1  wurstmineberg-web.service  wurstmineberg.de.nginx  wurstmineberg.ini  www.wurstmineberg.de.nginx
assets/img/: ava
assets/serverstatus/: online_count  server_status  whitelist.txt
assets/static/: common.js  map.js
bs3/: about.html  index.html
config/: assets.wurstmineberg.de.nginx  dev-wurstmineberg.ini  dev.wurstmineberg.de.nginx  wurstmineberg.de.nginx  wurstmineberg.ini  www.wurstmineberg.de.nginx
people/: index.html
src/: about.rs  api.rs  auth.rs  cal.rs  config.rs  discord.rs  form.rs  http.rs  lang.rs  lib.rs  log.rs  main.rs  stats.rs  systemd_minecraft.rs  time.rs  twitch.rs  user.rs  websocket.rs  wiki.rs
static/css/: common.css  responsive.css
static/html/: footer.html  header.html  navigation.html
static/js/: common.js  funding.js  home.js  people.js  profile.js  stats.js
static/json/: achievements.json  biomes.json  items.json  items.json.description.txt  strings.json
templates/: base.html
templates/page/: about.html  index.html  people.html  people_detail.html  stats.html
views/: about.html  about.tpl  index.html  index.tpl  people.html  people.tpl  people_detail.html  people_detail.tpl  stats.html  stats.tpl
views/includes/: base.html  footer.html  head.html  header.html  navigation.html
wurstmineberg_web/: __init__.py  __main__.py  api.py  assetserver  auth.py  config.py  database.py  error.py  forms.py  models.py  util.py  views.py  wiki.py  wurstminebot.py
wurstmineberg_web/templates/: about.html  about.html.j2  api-ext-404.html.j2  api-index.html  api-index.html.j2  base.html  base.html.j2  error.html  error.html.j2  index.html  index.html.j2  invalid-profile.html  invalid-profile.html.j2  login.html  macros.html  macros.html.j2  people.html  people.html.j2  preferences.html  preferences.html.j2  profile.html  profile.html.j2  stats.html  stats.html.j2  verify_token.html  wiki
wurstmineberg_web/templates/page/: error.html  index.html  login.html  login_done.html  people.html  people_detail.html  stats.html  verify_token.html
